--- a/05211940000105.html
+++ b/05211940000105.html
@@ -18,7 +18,7 @@
   
 <div class="container">
   <div class="text-center">
-  <p>Perkenalkan nama Saya Muhammad Andre Hanafi. Saya saat ini berkuliah di Institut Teknologi Sepuluh Nopember Surabaya departemen S-1 Sistem Informasi. Nomor induk atau NRP Saya adalah 05211940000105.
+  <p class="font-italic">Perkenalkan nama Saya Muhammad Andre Hanafi. Saya saat ini berkuliah di Institut Teknologi Sepuluh Nopember Surabaya departemen S-1 Sistem Informasi. Nomor induk atau NRP Saya adalah 05211940000105.
   </div>
   <div class="row">
     <div class="col">
