--- a/05211940000105_Week4.html
+++ b/05211940000105_Week4.html
@@ -18,29 +18,29 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark"> <!-- NAVBAR dan Segala Isinya -->
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_1.html">Tugas 1 CSS</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_1.html" target="_blank">Tugas 1 CSS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_2.html">Tugas 2 CSS</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_2.html" target="_blank">Tugas 2 CSS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_3.html">Tugas 3 CSS</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_3.html" target="_blank">Tugas 3 CSS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_4.html">Tugas 4 CSS</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_4.html" target="_blank">Tugas 4 CSS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_5.html">Tugas 5 CSS</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_5.html" target="_blank">Tugas 5 CSS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105.html">Tugas Bootstrap</a>
+        <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105.html" target="_blank">Tugas Bootstrap</a>
       </li>       
     </ul>
   </div>  
@@ -54,33 +54,28 @@
       <img src="images/foto-andre-di-forensik.jpg" width="180px" height="244px">
       <p>Nama Saya Muhammad Andre Hanafi. Saya berasal dari Bekasi. Saat ini, Saya sedang berkuliah di Institut Teknologi Sepuluh Nopember Surabaya. 
           Nomor induk Saya, atau di ITS biasa disebut NRP, adalah 05211940000105. Banyak hal luar biasa terdapat di depan dan Saya siap meraihnya dengan berusaha. 
-          <br>Feel free to contact me at:
-          <br><i class="fab fa-instagram"> </i> <a href="instagram.com/andrehanafiii">@andrehanafiii</a>
-          <br><i class="fab fa-whatsapp"> +6285719643222</i>
-          <br><i class="fab fa-line"> andre27hanafi</i>
-          <br><i class="fas fa-envelope"> andre27hanafi@gmail.com</i>
       </p>
       <br>
       <h3>Link/Tautan</h3>
       <p>Sebagai bagian dari pembelajaran Pemrograman Web C, di bawah ini merupakan tautan tugas yang sudah diberikan hingga minggu ke-4.</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_1.html">Tugas 1 CSS</a>
+          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_1.html" target="_blank">Tugas 1 CSS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_2.html">Tugas 2 CSS</a>
+          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_2.html" target="_blank">Tugas 2 CSS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_3.html">Tugas 3 CSS</a>
+          <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_3.html" target="_blank">Tugas 3 CSS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_4.html">Tugas 4 CSS</a>
+            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_4.html" target="_blank">Tugas 4 CSS</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_5.html">Tugas 5 CSS</a>
+            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105_5.html" target="_blank">Tugas 5 CSS</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105.html">Tugas Bootstrap</a>
+            <a class="nav-link" href="https://github.com/andrehanafiii/andrepwebc/blob/master/05211940000105.html" target="_blank">Tugas Bootstrap</a>
           </li>
       </ul>
       <hr class="d-sm-none">
@@ -111,11 +106,19 @@
       </p>
     </div>
   </div>
+</div>
 
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+  <div class="container-fluid">
+  <div class="jumbotron-fluid bg-dark text-light text-center" style="margin-bottom:0">
+    <br>
+<h4>Hubungi Saya:</h4>
+    <i class="fab fa-line"> andre27hanafi</i>
+<br><i class="fas fa-envelope"> andre27hanafi@gmail.com</i>
+<br><i class="fab fa-linkedin"> Muhammad Andre Hanafi</i>
+<br>
+<br>
 </div>
 </div>
+
 </body>
 </html>
